<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_background"
    android:padding="8dp">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/parcelValueTextField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/valor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/parcelValueEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/parcelDateTextField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/data"
        app:layout_constraintEnd_toEndOf="@id/parcelValueTextField"
        app:layout_constraintStart_toStartOf="@id/parcelValueTextField"
        app:layout_constraintTop_toBottomOf="@id/parcelValueTextField">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/parcelDateEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="date" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/registerParcelButton"
        style="@style/Widget.Material3.Button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/registrar_min"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@id/parcelValueTextField"
        app:layout_constraintStart_toStartOf="@id/parcelValueTextField"
        app:layout_constraintTop_toBottomOf="@id/parcelDateTextField" />

    <Button
        android:id="@+id/cancelButton"
        style="@style/Widget.Material3.Button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/red_negative"
        android:text="@string/fechar"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@id/parcelValueTextField"
        app:layout_constraintStart_toStartOf="@id/parcelValueTextField"
        app:layout_constraintTop_toBottomOf="@id/registerParcelButton" />
</androidx.constraintlayout.widget.ConstraintLayout>